# fotowall

./: .gitignore  .pre-commit-config.yaml  AppImageBuilder.yml  CMakeLists.txt  FotoWall.cpp  FotoWall.ui  README.md  fotowall.html  fotowall.js  fotowall.pro  main.cpp
.devcontainer/: devcontainer.json
.devcontainer/qt5-emscripten/: Dockerfile  devcontainer.json
.devcontainer/qt5-gcc/: Dockerfile  devcontainer.json
.devcontainer/qt6-emscripten/: Dockerfile  README.md  devcontainer.json
.devcontainer/qt6-gcc/: Dockerfile  devcontainer-wasm.json  devcontainer.json
.github/workflows/: build.yml  package.yml  webassembly.yml
App/: CanvasAppliance.cpp  ExportWizard.cpp  ExportWizard.h  ExportWizard.ui  MainWindow.cpp  MainWindow.h  SceneView.cpp
Canvas/: Canvas.cpp  Canvas.h  PictureContent.cpp  PictureContent.h  WordcloudContent.cpp  WordcloudContent.h
Shared/: BreadCrumbBar.cpp  BreadCrumbBar.h  BrowserItem.cpp  Compat.h
Wordcloud/: Scanner.cpp
debian/: changelog  control  copyright  fotowall.install
docker-emscripten/: Dockerfile  README.md  build.sh  run.sh
translations/: fotowall_de.ts  fotowall_fr.ts  fotowall_it.ts  fotowall_pt_BR.ts
